[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Interface/Interface_menu_main.gd" type="Script" id=1]

[node name="Interface_menu_main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button_play" type="Button" parent="."]
margin_left = 58.0
margin_top = 68.0
margin_right = 293.0
margin_bottom = 159.0
text = "PLAY"

[node name="Button_load" type="Button" parent="."]
margin_left = 61.0
margin_top = 194.0
margin_right = 342.0
margin_bottom = 326.0
text = "LOAD"

[node name="Button_exit" type="Button" parent="."]
margin_left = 68.0
margin_top = 401.0
margin_right = 465.0
margin_bottom = 535.0
text = "EXIT"

[connection signal="pressed" from="Button_play" to="." method="_on_Button_play_pressed"]
[connection signal="pressed" from="Button_load" to="." method="_on_Button_load_pressed"]
[connection signal="pressed" from="Button_exit" to="." method="_on_Button_exit_pressed"]
